# sfml-imgui-ready-project

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  repomix-output.xml
.github/template/: config.yml
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake
dependencies/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
src/: CMakeLists.txt  Shape.cpp  Shape.h  main.cpp
src/components/: CMakeLists.txt  Components.cpp  Components.h
src/entity/: CMakeLists.txt  Entity.cpp  Entity.h
src/entitymanager/: CMakeLists.txt  EntityManager.cpp  EntityManager.h
src/game/: CMakeLists.txt  Game.cpp  Game.h
src/shapes/: CMakeLists.txt  Shape.cpp  Shape.h
src/systems/: CMakeLists.txt  Systems.cpp  Systems.h
src/vec2/: CMakeLists.txt  Vec2.cpp  Vec2.h
